# arabic-nlp-toolkit

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tests.yml
arabic_nlp_toolkit/: __init__.py  morph_analyzer.py  sentiment_analyzer.py  text_cleaner.py  tokenizer.py
examples/: basic_usage.py
tests/: test_sentiment_analyzer.py  test_text_cleaner.py
